fix(tests): fix Java 8 compatibility and ProjectUtil mock in batch status tests